tests/compile_fail/filters_wrong_type.stderr
error[E0277]: the trait bound `Product: MongoComparable<f64, std::string::String>` is not satisfied
  --> tests/compile_fail/filters_wrong_type.rs:15:13
   |
15 |     builder.eq::<product_fields::Price, _>("wrong type".to_string());
   |             ^^ the trait `MongoComparable<f64, std::string::String>` is not implemented for `Product`
   |
   = help: the following other types implement trait `MongoComparable<A, B>`:
             `Product` implements `MongoComparable<f64, f32>`
             `Product` implements `MongoComparable<f64, f64>`
             `Product` implements `MongoComparable<f64, i16>`
             `Product` implements `MongoComparable<f64, i32>`
             `Product` implements `MongoComparable<f64, i64>`
note: required by a bound in `FilterBuilder::<T>::eq`
  --> src/filters.rs
   |
   |     pub fn eq<F, V>(&mut self, value: V) -> &mut Self
   |            -- required by a bound in this associated function
...
   |         T: HasField<F> + MongoComparable<T::Value, V>,
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `FilterBuilder::<T>::eq`
